--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
     </head>
     <body>
         <h1>test pages</h1>
+        <a class="buttons" href="udid_signed.mobileconfig" target="_blank">获取UDID</a>
     </body>
 </html>
