--- a/fingerprint.html
+++ b/fingerprint.html
@@ -1,24 +1,15 @@
 <html>
 <head>
   <title>FingerprintJS</title>
-  <link href='http://fonts.googleapis.com/css?family=Fjalla+One' rel='stylesheet' type='text/css'>
-  <style type="text/css">
-    body{
-      font-family: 'Sans'
-    }
-    .fancy{
-      font-family: 'Fjalla One', cursive;
-    }
-  </style>
   <script src="fp.js"></script>
 </head>
 <body>
   <center>
     <h3 style="margin-top: 60px">Your browser fingerprint is:</h3>
-    <h1 id="fp" class="fancy"></h1>
+    <h1 id="fp"></h1>
   </center>
   <script>
-    function initFingerprintJS() {
+    (function initFingerprintJS() {
     // Initialize an agent at application startup.
     const fpPromise = FingerprintJS.load()
 
@@ -31,8 +22,7 @@
         console.log(visitorId)
       document.getElementById('fp').innerHTML = visitorId
       })
-  }
-    document.getElementById('fp').innerHTML = fp.get();
+  })()
   </script>
 </body>
 </html>
