--- a/fingerprint.html
+++ b/fingerprint.html
@@ -13,18 +13,18 @@
     // Initialize an agent at application startup.
 //     const fpPromise = FingerprintJS.load("canvas")
     
-    var fingerprint = FingerprintJS.load({canvas: true}).get();
-      document.getElementById('fp').innerHTML = fingerprint
+    var fingerprint = FingerprintJS.load({canvas: true});
+//       document.getElementById('fp').innerHTML = fingerprint
 
     // Get the visitor identifier when you need it.
-//     fpPromise
-//       .then(fp => fp.get())
-//       .then(result => {
-//         // This is the visitor identifier:
-//         const visitorId = result.visitorId
-//         console.log(visitorId)
-//         document.getElementById('fp').innerHTML = visitorId
-//       })
+    fpPromise
+      .then(fp => fp.get())
+      .then(result => {
+        // This is the visitor identifier:
+        const visitorId = result.visitorId
+        console.log(visitorId)
+        document.getElementById('fp').innerHTML = visitorId
+      })
       
 //       document.getElementById('fp').innerHTML = FingerprintJS.sources.canvas()
   })()
