--- a/fingerprint.html
+++ b/fingerprint.html
@@ -13,7 +13,7 @@
     // Initialize an agent at application startup.
 //     const fpPromise = FingerprintJS.load("canvas")
     
-    var fingerprint = FingerprintJS.load({canvas: true});
+    const fpPromise = FingerprintJS.load({canvas: true});
 //       document.getElementById('fp').innerHTML = fingerprint
 
     // Get the visitor identifier when you need it.
