--- a/index.html
+++ b/index.html
@@ -1,9 +1,28 @@
 <html>
     <head>
         <title>tess page</title>
+        <script src="clipboard.min.js"></script>
     </head>
     <body>
         <h1>test pages</h1>
         <a class="buttons" href="udid_signed.mobileconfig" target="_blank">获取UDID</a>
+        <!-- Trigger -->
+        <button class="btn" data-clipboard-text="Just because you can doesn't mean you should — clipboard.js">Copy to clipboard</button>
     </body>
+    <script>
+        var clipboard = new ClipboardJS('.btn');
+
+clipboard.on('success', function(e) {
+    console.info('Action:', e.action);
+    console.info('Text:', e.text);
+    console.info('Trigger:', e.trigger);
+
+    e.clearSelection();
+});
+
+clipboard.on('error', function(e) {
+    console.error('Action:', e.action);
+    console.error('Trigger:', e.trigger);
+});
+    </script>
 </html>
